--- a/django_email_verification/tests/templates/mail.html
+++ b/django_email_verification/tests/templates/mail.html
@@ -1,2 +1,2 @@
-<h1>Hai quasi finito, {{ user.username }}! {{ expiry|time:"TIME_FORMAT" }}</h1><br>
-<h2>Clicca su <a href="{{ link }}">questo link</a> per confermare la tua mail</h2>
+<h1>You are almost there, {{ user.username }}! {{ expiry|time:"TIME_FORMAT" }}</h1><br>
+<h2>Click <a href="{{ link }}">here</a> to verify your email</h2>
